2002-09-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* inline.h (scm_double_cell): move SET_GCMARK set out of if body. 

2002-09-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* gc-malloc.c (scm_gc_register_collectable_memory): more overflow
	protection.

2002-09-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* inline.h: include stdio.h

	* smob.c (free_print): abort if scm_debug_cell_accesses_p is set

2002-09-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* gc-segment.c (scm_i_make_initial_segment): check user settings
	for sanity.

	* gc-malloc.c (scm_gc_init_malloc): check user settings for
	sanity.

	* gc-freelist.c (scm_init_freelist): check user settings for sanity. 

	* struct.h: change scm_structs_to_free to scm_i_structs_to_free

	* gc-malloc.c (scm_gc_register_collectable_memory): use floats;
	these won't ever wrap around with high memory usage. Thanks to
	Sven Hartrumpf for finding this.

	* gc-freelist.c: include <stdio.h>

	* gc-malloc.c: add DEBUGINFO for mtrigger GCs.

2002-09-01  Marius Vollmer  <mvo@zagadka.ping.de>

	* vectors.h (SCM_VECTOR_REF): New.

	* snarf.h (SCM_DEFINE_PUBLIC): New.

2002-08-30  Marius Vollmer  <mvo@zagadka.ping.de>

	* socket.c (scm_addr_vector): Added size of address to arguments.
	Use it to avoid accessing a non-existent path in a sockaddr_un.
	Changed all callers.

2002-08-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* gc.h: remove DOUBLECELL card flags.

	* gc-malloc.c (scm_calloc): try to use calloc() before calling
	scm_realloc().

	* gc-segment.c (scm_i_initialize_heap_segment_data): remove card
	init loop; handle this from scm_init_card_freelist()

	* gc-card.c (scm_init_card_freelist): init bit vector here.

	* numbers.c (scm_make_real): prevent reordering of statements
	num2float.i.c (FLOAT2NUM): idem

2002-08-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* eval.h: prepend libguile/ to include path

2002-08-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* script.c (scm_compile_shell_switches): Added "2002" to Copyright