@@ -31,12 +31,8 @@ NUM2FLOAT (SCM num, unsigned long int pos, const char *s_caller)
 SCM
 FLOAT2NUM (FTYPE n)
 {
-  SCM z;
-  z = scm_double_cell (scm_tc16_real, 0, 0, 0);
-  /*
-    See scm_make_real().
-   */
-  scm_remember_upto_here_1 (z);
+  SCM z = scm_double_cell (scm_tc16_real, 0, 0, 0);
+
   SCM_REAL_VALUE (z) = n;
   return z;
 }
